# veeam-metrics-collector

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-and-push.yaml  build.yaml
grafana/: VeeamBackupOverview.json  VeeamOffice365Overview.json
src/: app.py  requirements.txt
src/vb365/: collector.py
src/vbr/: collector.py
