[tool.poetry]
name = "veeam-metrics-collector"
version = "0.1.0"
description = ""
authors = ["Klemens Graf <klemens.graf@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sentry-sdk = "^2.13.0"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pytz = "^2024.1"
datetime = "^5.5"
python-dateutil = "^2.9.0.post0"
influxdb-client = "^1.45.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
